input: fix icon alignment for webkit
in webkit, baseline only works correctly when there is text in the input
field (presumably because there is no baseline when there is no text).
Since baseline and center looks identically in chrome/firefox just use
center which works as intended in webkit.

--- a/scss/_input.scss
+++ b/scss/_input.scss
@@ -33,7 +33,7 @@ input {
 
     // pwt-input is a container - use to add icons, i.e the dropdown picker
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
     gap: var(--pwt-icon-spacer);
 
     color: var(--pwt-color);
